--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>InSite | Effortless Website Feedback System |</title>
+    <title>InSite | Effortless Website Feedback System</title>
+
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.3.2/build/styles/atom-one-dark.min.css"></link>
 
   </head>
   <body>
