--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Capture and manage user feedback effortlessly with [Your App Name]. Simple integration, dynamic feedback links, and actionable insights."
     />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💬</text></svg>">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>InSite | Effortless Website Feedback System</title>
+    <title>InSite</title>
 
 
   </head>
